@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+ 
+ <javascript
+ 	cacheable="True"
+ 	compression="none"
+ 	cookable="False"
+    enabled="True"
+    expression=""
+    id="++resource++collective.solr.resources/explain.js"
+    inline="False"/>
+    
+</object>
