@@ -33,6 +33,8 @@ First some initial setup code:
 	[]
 	>>> config.active_scores
 	False
+	>>> config.debug_query
+	False
 
 Viewing the site control panel
 -----------------------------
@@ -88,6 +90,7 @@ activated.  At the moment only the already configured value shows up:
 Now test solr score boosting::
 
 	>>> self.browser.getControl(name='form.active_scores').value = True
+	>>> self.browser.getControl(name='form.debug_query').value = True	
 	>>> self.browser.getControl(name="form.scores.add").click()
 	>>> 'Choose scorable index to set score for.' in self.browser.contents
 	True
@@ -128,6 +131,8 @@ Make sure the changes have been applied correctly to the tool:
     >>> config.facets
     [u'type', u'state']
 	>>> config.active_scores
+	True
+	>>> config.debug_query
 	True
 	>>> config.scores
 	[<collective.solr.score.ScoreFactory object at ...>]
